--- a/noticeboard.html
+++ b/noticeboard.html
@@ -1,6 +1,17 @@
 <!doctype html>
-<html>
-    <title> NoticeBoard </title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>College Notice Board</title>
+</head>
 <body>
+    <h1>College Notice Board</h1>
+    <ul>
+        <li>Important Announcement: There will be a faculty meeting tomorrow at 10:00 AM in the conference room.</li>
+        <li>Sports Event: The annual inter-college sports tournament will be held on April 15th. Register now!</li>
+        <li>Library Closure: The library will be closed for renovations from March 20th to April 5th. Plan your studies accordingly.</li>
+    </ul>
 </body>
 </html>
+
